[package]
name = "rookie-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
bytes = "1.2.1"
atoi = "2.0.0"
regex = "1.6.0"
lazy_static = "1.4.0"
clap = { version = "4.4.18", features = ["derive"]}
